# logfile-processor

./: .gitignore  build.py  readme.md
.github/workflows/: rust.yml
backend/: Cargo.toml  readme.md
backend/data/: logfile1.txt
backend/src/: api_doc.rs  log_storage.rs  main.rs
backend/src/api/: filter.rs  mod.rs  stream_filtered_logs.rs  upload.rs
backend/src/model/: close_session_query.rs  filter.rs  log_summary.rs  mod.rs  upload_response.rs
backend/src/parsing/: parser.rs
backend/src/parsing/parser/tests/: parser_test.rs
frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  readme.md  tailwind.config.cjs
frontend/openapi/client/: index.ts
frontend/openapi/client/models/: FilterRequest.ts  FilteredLogResponse.ts  LogSummary.ts  UploadFileBody.ts  UploadResponse.ts
frontend/openapi/client/services/: FilterService.ts  LogUploadService.ts  UploadService.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LogSummaryCard.tsx  LogSummarySidebar.tsx  LogViewer.tsx  LogViewerOptionsCard.tsx  SearchableMultiSelect.tsx
frontend/src/components/ui/: SearchableMultiSelect.tsx  button.tsx
frontend/src/lib/: colorMap.ts
frontend/src/pages/: Dashboard.tsx
