[package]
name = "logfile_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"