[package]
name = "logfile_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"

# OpenAPI + Swagger UI
utoipa = "5.2"
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }